--- a/everytime/css/style_login.css
+++ b/everytime/css/style_login.css
@@ -7,9 +7,19 @@
   color: #292929;
 }
 
+@media all and (max-width: 780px) {
+  .container {
+    width: 80%;
+  }
+  .logo > img {
+    align-items: center;
+  }
+}
+
 .logo {
-  display: block;
+  display: flex;
   box-sizing: border-box;
+  justify-content: space-around;
 }
 
 .logo > img {
