[0507] 에브리타임 반응형

--- a/everytime/css/detail.css
+++ b/everytime/css/detail.css
@@ -1,8 +1,17 @@
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%; /* 10px */
+}
+
 .section {
-  height: 80px;
+  height: 5.5vw;
   display: flex;
   justify-content: space-around;
   align-items: center;
+  margin-bottom: 0.5vw;
 }
 
 .logo {
@@ -11,17 +20,52 @@
   align-items: flex-end;
 }
 
+.logo_img {
+  width: 2vw;
+  height: 2vw;
+  overflow: hidden;
+  margin: 0 auto;
+}
+
+.logo_img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.logo2 {
+  display: none;
+}
+
+.logo2 p {
+  margin-left: 2vw;
+  font-size: 1.4rem;
+}
+
+.logo_img2 {
+  width: 3vw;
+  height: 3vw;
+  overflow: hidden;
+  margin: 0 auto;
+}
+
+.logo_img2 img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .logo_text {
   display: flex;
   flex-direction: column;
-  margin-left: 10px;
+  margin-left: 0.7vw;
 }
 
 #logo_text1 {
-  font-size: smaller;
+  font-size: 0.8vw;
 }
 #logo_text2 {
-  font-size: x-large;
+  font-size: 2vw;
   font-weight: bold;
 }
 
@@ -31,9 +75,10 @@
 }
 
 .nav ul li {
-  margin: 0 10px;
+  margin: 0 0.7vw;
   list-style: none;
   font-weight: bold;
+  font-size: 1vw;
 }
 
 .profile {
@@ -44,9 +89,9 @@
 .profile div {
   border: 1px solid gainsboro;
   border-radius: 10px;
-  margin: 5px;
-  width: 30px;
-  height: 30px;
+  margin: 0.3vw;
+  width: 2vw;
+  height: 2vw;
 }
 
 .profile div img {
@@ -58,14 +103,19 @@
 .menu {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  /* justify-content: center; */
   background-color: #f9f9f9;
   border-top: 1px solid gainsboro;
   border-bottom: 1px solid gainsboro;
+
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  overflow-x: auto;
 }
 
 .menu_ {
-  margin: 20px;
+  margin: 1.3vw;
 }
 
 .menu_ ul {
@@ -74,26 +124,26 @@
 
 #menu_ul {
   border-right: 1px solid gainsboro;
-  padding-right: 30px;
+  padding-right: 2vw;
 }
 
 .menu_ ul li {
   list-style: none;
-  font-size: 14px;
-  margin: 5px;
+  font-size: 1.4rem;
+  margin: 0.3vw;
 }
 
 .content {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  margin-top: 30px;
+  margin-top: 2vw;
 }
 
 .section1 {
   display: flex;
   flex-direction: column;
-  width: 700px;
+  width: 49vw;
 }
 
 .board,
@@ -106,25 +156,25 @@
 
 .board span,
 .new_post span {
-  margin-left: 10px;
+  margin-left: 0.7vw;
 }
 
 .board {
-  padding: 5px;
+  padding: 0.3vw;
 }
 
 .board span {
   font-weight: bolder;
-  font-size: 20px;
+  font-size: 2rem;
 }
 
 .new_post {
   background-color: rgb(248, 248, 248);
-  padding: 5px;
+  padding: 0.3vw;
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 4px;
+  padding: 0.3vw;
 }
 
 .new_post span {
@@ -133,13 +183,22 @@
 
 .span1 {
   font-weight: bold;
+  font-size: 1.6rem;
+  display: inline-block;
+  margin-bottom: 0.2vw;
+}
+
+.span2 {
+  font-size: 1.4rem;
+  display: inline-block;
+  margin-bottom: 0.2vw;
 }
 
 .aside {
   display: flex;
   flex-direction: column;
-  width: 350px;
-  margin-left: 30px;
+  width: 24vw;
+  margin-left: 2vw;
 }
 
 .aside_live {
@@ -148,12 +207,12 @@
 
 .aside_hot {
   border: 1.6px solid gainsboro;
-  margin-top: 10px;
+  margin-top: 0.7vw;
 }
 
 .live_post,
 .hot_post {
-  margin: 10px 15px;
+  margin: 0.7vw 1vw;
 }
 
 .post_ {
@@ -164,58 +223,53 @@
 
 .div_ {
   flex: 8;
-  margin: 15px 12px;
+  margin: 1vw 0.8vw;
 }
 
 .live_title,
 .hot_title {
   font-weight: bolder;
-  font-size: 18px;
+  font-size: 1.8rem;
   color: #1f50a3;
-  margin: 12px;
+  margin: 0.8vw;
 }
 
 .span3 {
-  font-size: 13px;
+  font-size: 1.2rem;
   color: #969696;
+  margin-right: 0.2vw;
 }
 
-.q_class {
-  background-color: #f2fefe;
-  border-radius: 10px;
-  padding: 5px;
-}
-
-.h_class {
-  background-color: #fcf3f3;
-  border-radius: 10px;
-  padding: 5px;
-}
-
-.question,
-.hot {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  padding: 5px;
-}
-
-.keyword {
-  padding: 10px;
-}
-
-.question img,
-.hot img {
-  margin-right: 10px;
+.span4 {
+  font-size: 1.3rem;
 }
 
 .post_detail {
   border: 1.6px solid gainsboro;
 }
+
 .post_detail_header {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
+}
+
+.post_detail_img {
+  width: 50px;
+  height: 50px;
+  overflow: hidden;
+  margin: 0 auto;
+  border-radius: 10px;
+}
+
+.post_detail_img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.post_detail_content p {
+  font-size: 1.4rem;
 }
 
 .post_detail_comment {
@@ -224,35 +278,33 @@
   align-items: center;
 }
 
-.post_detail_img,
 .post_detail_comment_img {
-  border-radius: 10px;
+  width: 30px;
+  height: 30px;
   overflow: hidden;
-}
-
-.post_detail_img img {
-  width: 50px;
-  height: 50px;
+  margin: 0 auto;
+  border-radius: 10px;
 }
 
 .post_detail_comment_img img {
-  width: 30px;
-  height: 30px;
-  object-fit: fill;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .post_detail_info,
 .post_detail_comment_info {
   flex: 8;
-  margin-left: 7px;
+  margin-left: 0.4vw;
 }
 
 .post_detail_info p,
 .post_detail_comment_info p,
 .post_detail_info2 p,
 .post_detail_comment_info2 p,
-.post_detail_comment2 p,
-.list_button p {
+.light,
+.list_button p,
+.write {
   margin: 0;
 }
 
@@ -260,11 +312,12 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-bottom: 15px;
+  margin-bottom: 1vw;
 }
 
 .post_detail_icons p {
-  margin: 0px 15px 0px 5px;
+  margin: 0px 13px 0px 5px;
+  font-size: 1.2rem;
 }
 
 .post_detail_icons img,
@@ -286,39 +339,48 @@
 .button2 {
   border-radius: 5px;
   background-color: #f6f6f6;
-  margin-right: 20px;
-  padding: 8px;
+  margin-right: 1.3vw;
+  padding: 0.5vw;
 }
 
 .button1 p,
 .button2 p {
   margin: 0px 0px 0px 3px;
-  font-size: 12px;
+  font-size: 1.2rem;
   font-weight: bold;
   color: #666666;
 }
 
 .post_detail1 {
-  padding: 15px;
+  padding: 1vw;
 }
 
 .post_detail2 {
   padding: 3px 15px 10px 15px;
 }
 
+.comment {
+  font-size: 1.3rem;
+  margin: 0.3vw 0;
+}
+
 .light {
   color: #969696;
-  font-size: 13px;
+  font-size: 1.2rem;
 }
 
 .title {
-  font-size: 20px;
+  font-size: 2rem;
   font-weight: bold;
 }
 
 .name {
   font-weight: bold;
-  font-size: 14px;
+  font-size: 1.4rem;
+}
+
+.post_detail_comment2 {
+  font-size: 1.2rem;
 }
 
 .post_detail_write {
@@ -326,35 +388,34 @@
   flex-direction: row;
   align-items: center;
   background-color: #f6f6f6;
-}
-
-.post_detail_write p,
-input {
-  color: ;
+  height: 40px;
 }
 
 .div_write {
   flex: 8;
-  margin-left: 15px;
+  margin-left: 1vw;
 }
 
 .write {
-  margin: 0;
+  font-size: 1.3rem;
 }
 
 .post_detail_write_img {
   background-color: #f91f15;
   width: 40px;
   height: 40px;
+  overflow: hidden;
+  margin: 0 auto;
 }
 
 .post_detail_write_img img {
-  width: 40px;
-  height: 40px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .div_check {
-  margin-right: 10px;
+  margin-right: 0.8vw;
 }
 
 .list_button {
@@ -364,13 +425,24 @@ input {
 }
 
 .list_button div {
-  margin-right: 10px;
+  margin-right: 0.6vw;
+}
+
+.button_img {
+  width: 20px;
+  height: 20px;
+  overflow: hidden;
+  margin: 0 auto;
 }
 
 .button_img img {
-  width: 20px;
-  height: 20px;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
+}
+
+.list_button p {
+  font-size: 1.3rem;
 }
 
 .button {
@@ -378,6 +450,46 @@ input {
   background-color: white;
   border: 1px solid #f91f15;
   border-radius: 5px;
-  margin: 8px;
-  padding: 8px;
+  margin: 0.5vw;
+  padding: 0.5vw;
+}
+
+@media all and (min-width: 1024px) {
+  /* 화면 너비가 1024px 이상인 경우에만 적용되는 스타일 */
+  .menu {
+    justify-content: center;
+  }
+}
+
+@media all and (max-width: 640px) {
+  /* 화면 너비가 640px 이하인 경우에만 적용되는 스타일 */
+  .logo,
+  .nav,
+  .profile {
+    display: none;
+  }
+
+  .section {
+    justify-content: flex-start;
+    margin-left: 2vw;
+  }
+
+  .logo2 {
+    visibility: visible;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .aside {
+    display: none;
+  }
+
+  .board {
+    display: none;
+  }
+
+  .section1 {
+    width: 90vw;
+  }
 }
