--- a/everytime/css/post.css
+++ b/everytime/css/post.css
@@ -1,7 +1,15 @@
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%; /* 10px */
+}
+
 .post {
-  width: 700px;
+  width: 45vw;
   margin: auto;
-  margin-top: 70px;
+  margin-top: 5vw;
   display: flex;
   flex-direction: column;
 }
@@ -17,37 +25,61 @@ textarea {
 
 .title input {
   height: 40px;
-  font-size: 16px;
+  font-size: 1.6rem;
   font-weight: bold;
 }
 
 textarea {
   height: 300px;
   resize: none;
-  font-size: 16px;
+  font-size: 1.6rem;
 }
 
 .post1 {
   width: 100%;
+  height: 35px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   border: 1px solid gainsboro;
-  margin-top: -5px;
+  margin-top: -3px;
   padding: 0;
 }
 
-img {
-  width: 40px;
+.post1_div {
+  flex: 8;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
 }
 
+.post1_img,
 .post1_img2 {
+  width: 35px;
+  height: 35px;
+  overflow: hidden;
+  margin: 0;
+}
+
+.post1_img img,
+.post1_img2 img,
+.post1_img3 img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.post1_img3 {
   background-color: #f91f15;
   text-align: center;
   margin-left: 1px;
+  width: 35px;
+  height: 35px;
+  overflow: hidden;
+  margin: 0 auto;
 }
 
-.post1_img {
-  width: 600px;
+.form {
+  margin-right: 20px;
 }
