--- a/everytime/css/login.css
+++ b/everytime/css/login.css
@@ -1,6 +1,9 @@
 @media all and (max-width: 780px) {
   .login-form {
-    margin: 0;
+    width: 100vw;
+  }
+  .info {
+    margin: 0em 12em 0em 12em;
   }
 }
 
@@ -35,7 +38,7 @@ body {
 
 #id,
 #password {
-  width: 350px;
+  width: 100%;
   height: 35px;
   background-color: #f1f1f1;
   border-radius: 12px;
