--- a/everytime/css/main.css
+++ b/everytime/css/main.css
@@ -1,3 +1,42 @@
+@media all and (min-width: 641px) {
+  body .header_hidden {
+    display: none;
+  }
+  .posted {
+    justify-content: center;
+  }
+}
+
+@media all and (max-width: 1180px) {
+  body .header,
+  section .posted {
+    justify-content: flex-start;
+    overflow-x: hidden;
+  }
+}
+
+@media all and (max-width: 640px) {
+  body .header {
+    display: none;
+  }
+  section .aside {
+    display: none;
+  }
+  .secret .title {
+    display: none;
+  }
+  body #sec2 {
+    justify-content: flex-start;
+    width: 100%;
+    margin-top: 2px;
+  }
+  section .posted {
+    height: 220px;
+    justify-content: flex-start;
+    overflow-x: auto;
+  }
+}
+
 body {
   display: flex;
   flex-direction: column;
@@ -6,6 +45,7 @@ body {
   background-color: #ffffff;
   font-family: "Apple SD Gothic Neo", "맑은 고딕", "돋움", sans-serif;
   letter-spacing: -0.5px;
+  overflow-x: hidden;
 }
 
 .header {
@@ -13,13 +53,29 @@ body {
   align-items: center;
   justify-content: center;
   background-color: #ffffff;
-  width: 100%;
+  width: 100vw;
   height: 80px;
+  white-space: nowrap;
+}
+
+.header_hidden {
+  display: flex;
+  align-items: center;
+  padding: 13px;
+  z-index: 1;
+  font-size: 17px;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.2);
+}
+
+.header_hidden img {
+  width: 1.5em;
+  padding-right: 14px;
 }
 
 .logo {
   display: flex;
   align-items: center;
+  margin-right: 150px;
 }
 
 .logo img {
@@ -49,8 +105,6 @@ body {
 
 nav {
   justify-content: center;
-  margin-left: 200px;
-  margin-right: 200px;
 }
 
 nav ul {
@@ -85,6 +139,7 @@ nav ul li:hover {
 .icon {
   display: flex;
   flex-direction: row;
+  margin-left: 200px;
 }
 
 .icon img {
@@ -106,23 +161,17 @@ nav ul li:hover {
   border-top: 1px solid #dcdcdc;
   border-bottom: 1px solid #dcdcdc;
   background-color: #f2f2f2;
-  width: 100%;
-  height: 210px;
+  height: 230px;
   padding-top: 10px;
   padding-bottom: 10px;
   display: flex;
   flex-direction: row;
   justify-content: center;
   list-style-type: none;
-}
-
-.line {
-  display: flex;
-  width: 1px;
-  height: 200px;
-  margin-left: 15px;
-  margin-right: 15px;
-  background-color: #d8d8d8;
+  overflow-x: hidden;
+  white-space: nowrap;
+  padding: 0 auto;
+  margin: 0 auto;
 }
 
 .posted ul {
@@ -132,12 +181,14 @@ nav ul li:hover {
   list-style-type: none;
   justify-content: space-evenly;
   padding: 0px;
+  margin: 0;
   font-size: 13px;
   color: #444444;
 }
 
 .posted li {
   margin-bottom: 6.5px;
+  flex-shrink: 0;
 }
 
 .posted li:hover {
@@ -145,8 +196,28 @@ nav ul li:hover {
 }
 
 .postText {
-  width: 130px;
-  margin-right: 10px;
+  margin: 13px 0px 13px 10px;
+  border-left: 1px solid #e1e1e1;
+  padding-left: 15px;
+  padding-right: 40px;
+  flex-shrink: 0;
+}
+
+#noline {
+  border: none;
+  font-size: 13px;
+  color: #444444;
+}
+
+#lastline {
+  border-right: 1px solid #e1e1e1;
+  font-size: 13px;
+  color: #444444;
+}
+
+.postText ul li:hover {
+  color: red;
+  font-weight: bold;
 }
 
 #sec2 {
@@ -154,6 +225,11 @@ nav ul li:hover {
   flex-direction: row;
   justify-content: center;
   margin-top: 22px;
+}
+
+.secret {
+  width: 50em;
+  white-space: nowrap;
 }
 
 .secret > div {
@@ -170,8 +246,6 @@ nav ul li:hover {
 
 .ask {
   justify-content: center;
-  width: 700px;
-  padding: 15px;
 }
 
 .ques img,
@@ -233,6 +307,7 @@ nav ul li:hover {
   border: 2px solid #d6d6d6;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   padding: 3px 0px 3px 10px;
   color: #b9b9b9;
   font-size: 14px;
@@ -241,7 +316,6 @@ nav ul li:hover {
 
 #border img {
   width: 40px;
-  margin-left: 535px;
 }
 
 #posting {
