--- a/everytime/css/main.css
+++ b/everytime/css/main.css
@@ -9,8 +9,11 @@ body {
   height: 212px;
   width: 0.2px;
   border-width: 0;
-  color: rgb(230, 227, 227);
-  background-color: rgb(230, 227, 227);
+  color: #e6e3e3;
+  background-color: #e6e3e3;
+}
+.menu > ul {
+  padding: 0;
 }
 
 .menu ul li {
@@ -27,27 +30,33 @@ body {
 .nav_menu {
   box-sizing: border-box;
   height: 65px;
-  margin: 0px 200px;
   display: flex;
   justify-content: space-around;
+  flex-wrap: nowrap;
+  white-space: nowrap;
+  margin-bottom: 10px;
+  position: fixed;
+  z-index: 100;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 75px;
+  border-bottom: 1px solid #d6d6d6;
+  background-color: #ffffff;
 }
 
 .logo_left {
   display: flex;
   box-sizing: border-box;
-  width: 250px;
   height: 70px;
 }
-
-.logo_img {
-  height: 65%;
-  margin-top: 12px;
-}
-
 .title {
-  display: inline-block;
-  width: 150px;
-  text-align: left;
+  width: 93px;
+}
+.logo_img {
+  height: 60%;
+  margin-top: 13px;
+  margin-right: 15px;
 }
 
 #everytime {
@@ -66,7 +75,7 @@ body {
 }
 
 .logo_right > img {
-  border: 1px solid rgb(230, 227, 227);
+  border: 1px solid #e6e3e3;
   border-radius: 10px;
   box-sizing: border-box;
   width: 40px;
@@ -76,11 +85,15 @@ body {
 }
 
 .category {
-  background-color: rgb(239, 239, 239);
+  background-color: #efefef;
+  border: 1px solid #e6e3e3;
   text-align: center;
   vertical-align: top;
   box-sizing: border-box;
-  height: 235px;
+  height: 100%;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  white-space: nowrap;
 }
 
 .cat {
@@ -104,16 +117,23 @@ body {
 
 .main_left {
   box-sizing: border-box;
-  width: 1200px;
-  padding-left: 190px;
-  padding-top: 40px;
+  width: 800px;
+  padding: 30px 15px 30px 30px;
+}
+
+.category_name {
+  box-sizing: border-box;
+  border: 1.5px solid rgb(221, 221, 221);
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  width: 100%;
 }
 
 .title_1 {
   font-weight: bold;
   font-size: 22px;
-  border: 1.5px solid rgb(221, 221, 221);
-  padding: 13px 650px 13px 15px;
+  padding: 13px 15px;
 }
 
 .preview_img {
@@ -142,35 +162,49 @@ body {
 }
 
 .posting_preview {
+  box-sizing: border-box;
   border: 1.5px solid rgb(221, 221, 221);
-  margin-top: 20px;
-  width: 760px;
+  margin-top: 5px;
+  width: 100%;
   padding-left: 15px;
+}
+
+.write_box {
+  background-color: #fafafa;
+  border: 2.2px solid #dddddd;
+  margin: 5px 0;
 }
 
 .write {
+  box-sizing: border-box;
   font-size: 14px;
-  border: 2px solid rgb(221, 221, 221);
-  margin-top: 5px;
-  margin-bottom: 5px;
   height: 45px;
-  width: 760px;
-  padding-left: 15px;
-  background-color: rgb(250, 250, 250);
+  padding-left: 10px;
   display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .write p {
-  color: rgb(207, 207, 207);
-  width: 150px;
-  margin-right: 150px;
+  color: #cfcfcf;
+  width: 80%;
+  margin-right: 10px;
+  justify-content: left;
+}
+
+.pencil {
+  width: 40px;
+  height: 40px;
+  margin-top: 3px;
+  justify-content: right;
 }
 
 .posting {
-  border: 1.5px solid rgb(221, 221, 221);
+  box-sizing: border-box;
+  border: 1.5px solid #dddddd;
   margin-top: 0px;
-  margin-bottom: -1px;
-  width: 760px;
+  margin-bottom: -0.7px;
+  width: 100%;
   height: 100px;
   padding-left: 15px;
   font-size: 14px;
@@ -196,25 +230,75 @@ body {
 
 .main {
   display: flex;
+  justify-content: center;
 }
 
 .main_right {
   float: right;
   box-sizing: border-box;
-  width: 400px;
-  margin-top: 25px;
-  margin-right: 190px;
+  width: 370px;
+  padding: 30px 30px 30px 15px;
+}
+.icon-bar {
+  display: flex;
+  margin: 5px 10px;
+  display: flex;
+  align-items: center;
+}
+
+.icon-bar > div {
+  display: flex;
+  margin-right: 3px;
+}
+
+.icon-bar > p,
+.icon-bar > div > p {
+  font-size: 12px;
+  margin: 0px 3px 3px 3px;
+}
+
+.icon-bar > p {
+  font-size: 11px;
+  margin: 0;
+  color: #a2a2a2;
+  font-weight: 600;
+  font-size: 11px;
+  margin-right: 10px;
+}
+
+.vote-number {
+  color: #f91f15;
+  margin-bottom: 0;
+}
+
+.comment-number {
+  color: #05bcbc;
+  margin-bottom: 0;
+}
+
+.scrap-number {
+  color: #ffc900;
+}
+
+.icon {
+  width: 12px;
+  height: 12px;
+  margin-top: 2px;
 }
 
 .posting_popular {
-  border: 1px solid rgb(221, 221, 221);
   margin-bottom: 5px;
-  background-color: rgb(249, 249, 249);
+  background-color: #f9f9f9;
+}
+
+.p_contentbox {
+  border: 1px solid #dddddd;
+  margin-top: -0.5px;
 }
 
 .posting_hot {
-  border: 1px solid rgb(221, 221, 221);
-  background-color: rgb(249, 249, 249);
+  border: 1px solid #dddddd;
+  background-color: #f9f9f9;
   height: 160px;
 }
 
@@ -253,27 +337,15 @@ body {
   justify-content: space-between;
   height: 25px;
   padding-bottom: 14.5px;
-  border-bottom: 1px solid rgb(230, 227, 227);
-}
-
-hr {
-  border: 0;
-  height: 1px;
-  background: #e6e3e3;
-}
-
-.pencil {
-  width: 40px;
-  height: 40px;
-  margin-left: 420px;
-  margin-top: 3px;
+  border-bottom: 1px solid #e6e3e3;
 }
 
 .footer {
   list-style: none;
   display: flex;
-  width: 100%;
   justify-content: center;
+  white-space: nowrap;
+  padding: 0;
 }
 
 .footer > li {
@@ -282,4 +354,105 @@ hr {
   font-size: 13px;
   color: #a6a6a6;
   text-align: center;
+}
+
+@media all and (max-width: 1235px) {
+  .nav_menu {
+    width: 100vw;
+    overflow-x: hidden;
+    -ms-overflow-style: none;
+    justify-content: space-between;
+    margin: 0px 25px 10px 25px;
+  }
+  .nav_menu::-webkit-scrollbar {
+    display: none;
+  }
+
+  .main {
+    width: 1235px;
+    overflow-x: hidden;
+  }
+}
+
+@media all and (max-width: 640px) {
+  .nav_menu,
+  .main_right,
+  .category_name {
+    display: none;
+  }
+  .wrap_bar {
+    justify-content: left;
+    position: fixed;
+    z-index: 100;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 55px;
+    border-bottom: 1px solid #d6d6d6;
+    background-color: #ffffff;
+  }
+
+  .category {
+    padding-top: 50px;
+  }
+
+  .main_left {
+    width: calc(100vw - 15px);
+    padding: 0;
+  }
+
+  .main {
+    width: calc(100vw - 17px);
+    -ms-overflow-style: none;
+  }
+  .main::-webkit-scrollbar {
+    display: none;
+  }
+
+  .write_box {
+    margin: 4px;
+  }
+
+  .footer {
+    flex-wrap: wrap;
+  }
+  .category::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+.category {
+  overflow: auto;
+  -ms-overflow-style: none;
+}
+
+@media all and (min-width: 640px) {
+  .category {
+    margin-top: 75px;
+  }
+  .wrap_bar h3 {
+    display: none;
+  }
+
+  .wrap_bar img {
+    display: none;
+  }
+}
+
+.wrap_bar {
+  display: flex;
+  align-items: center;
+}
+
+.wrap_bar > img {
+  width: 25px;
+  height: 25px;
+  padding: 5px 10px;
+  margin-right: 5px;
+}
+
+.wrap_bar > h3 {
+  font-weight: 400;
+  color: #535252;
+  margin: 0;
 }
