[0508] 에브리타임 반응형

--- a/everytime/css/main.css
+++ b/everytime/css/main.css
@@ -362,7 +362,7 @@ body {
     overflow-x: hidden;
     -ms-overflow-style: none;
     justify-content: space-between;
-    margin: 0px 25px 10px 25px;
+    padding: 0px 25px 10px 25px;
   }
   .nav_menu::-webkit-scrollbar {
     display: none;
