--- a/everytime/css/login.css
+++ b/everytime/css/login.css
@@ -23,7 +23,7 @@
 .idboxall {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
 }
 
 .redbox {
@@ -58,4 +58,36 @@
 .forcenter {
   display: flex;
   justify-content: center;
+}
+.loginkor > input {
+  width: 280px;
+}
+/*media*/
+@media all and (min-width: 780px) {
+  .middleboxall {
+    width: 100%;
+    display: flex;
+    flex-direction: center;
+  }
+
+  .idbox {
+    width: 560px;
+    display: flex;
+    flex-direction: center;
+  }
+
+  .redbox {
+    width: 100%;
+    margin-top: 5px;
+    background: none;
+    border: none;
+  }
+  .loginkor > input {
+    width: 560px;
+  }
+
+  .loginkor {
+    display: flex;
+    justify-content: center;
+  }
 }
