[0508] 에브리타임 반응형

--- a/everytime/css/detail.css
+++ b/everytime/css/detail.css
@@ -61,10 +61,254 @@ li {
 }
 
 @media only screen and (min-width: 641px) {
+  aside.none {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 641px) {
+  aside > div.title > a.hamburger {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  #container > div.title {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 641px) {
   #bottom {
     margin: 0 auto 25px auto;
     width: 1180px;
   }
+}
+
+@media only screen and (max-width: 640px) {
+  aside.none {
+    height: 50px;
+  }
+}
+@media only screen and (max-width: 640px) {
+  aside {
+    position: fixed;
+    z-index: 90;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 90px;
+    border-bottom: 1px solid #d6d6d6;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  aside > div.title {
+    height: 50px;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  aside > div.title > a.hamburger {
+    position: absolute;
+    z-index: 91;
+    left: 0;
+    top: 0;
+    display: block;
+    width: 56px;
+    height: 50px;
+    background: #fff url(../img/aside.title.hamburger.png) no-repeat center
+      center;
+    background-size: 24px 24px;
+  }
+}
+@media only screen and (max-width: 640px) {
+  aside > div.title > h1 {
+    padding-left: 56px;
+    height: 50px;
+    line-height: 50px;
+    font-weight: normal;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  #submenu > div.wrap {
+    padding: 10px;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  nav {
+    display: none;
+    position: fixed;
+    z-index: 100;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  nav > div.wrap {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 75%;
+    height: 100%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    background-color: #fff;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  #logo {
+    padding-left: 24px;
+  }
+}
+
+#logo > a {
+  float: left;
+  display: block;
+  margin: 20px 16px 20px 0;
+  width: 40px;
+  height: 40px;
+}
+
+#logo > a > img {
+  width: 100%;
+  height: 100%;
+}
+
+#logo > p {
+  float: left;
+}
+
+#logo > p > span.name.multiple {
+  margin-top: 20px;
+  margin-left: 3px;
+  line-height: 15px;
+  font-size: 12px;
+}
+
+#logo > p > span.name {
+  display: block;
+  color: #f91f15;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+#logo > p > span.subname {
+  display: block;
+  line-height: 25px;
+  color: #292929;
+  font-size: 22px;
+}
+
+@media only screen and (max-width: 640px) {
+  #menu > li > a:hover,
+  #menu > li.active > a {
+    background-color: #f8f8f8;
+  }
+}
+#menu > li > a:hover,
+#menu > li.active > a {
+  color: #f91f15;
+}
+@media only screen and (max-width: 640px) {
+  #menu > li > a {
+    display: block;
+    padding: 12px 24px;
+    line-height: 24px;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  #submenu {
+    margin-top: 50px;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  aside > div.title > h1 {
+    padding-left: 56px;
+    height: 50px;
+    line-height: 50px;
+    font-weight: normal;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+}
+
+#menu > li > a {
+  color: #444444;
+  font-size: 16px;
+  font-weight: bold;
+}
+@media only screen and (max-width: 640px) {
+  #account {
+    position: absolute;
+    z-index: 101;
+    left: 0;
+    bottom: 0;
+    padding-left: 25px;
+    height: 80px;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  #menu {
+    clear: left;
+  }
+}
+
+#account {
+  padding: 20px 0;
+  box-sizing: border-box;
+  font-size: 0;
+}
+
+#account a.icon.message {
+  background-image: url(/imag/icn_m_chat_gray800_light.png);
+  background-size: 24px 24px;
+}
+
+#account a.icon.my {
+  background-image: url(/img/icn_m_account_gray800_light.png);
+  background-size: 24px 24px;
+}
+
+#account a.icon {
+  width: 40px;
+  color: transparent;
+  font-size: 0;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+#account a {
+  position: relative;
+  display: inline-block;
+  margin-left: 4px;
+  height: 40px;
+  line-height: 40px;
+  box-sizing: border-box;
+  border: 1px solid #d6d6d6;
+  border-radius: 12px;
+  vertical-align: top;
+}
+
+aside > div.title > h1 {
+  color: #262626;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+aside > div.title > h1 > a {
+  color: inherit;
 }
 
 #bottom {
@@ -86,6 +330,23 @@ li {
 #bottom > ul.links > li.copyright > a,
 #bottom > ul.links > li.privacy > a {
   font-weight: bold;
+}
+
+div.container form div.input input[type="password"][data-v-c80e0668],
+div.container form div.input input[type="text"][data-v-c80e0668] {
+  display: block;
+  box-sizing: border-box;
+  margin-top: 4px;
+  padding: 10px;
+  border-radius: 12px;
+  width: 100%;
+  line-height: 24px;
+  color: #292929;
+  font-size: 16px;
+  background-color: #f2f2f2;
+  background-repeat: no-repeat;
+  background-position: right 8px center;
+  background-size: 24px 24px;
 }
 
 @media only screen and (min-width: 641px) {
@@ -155,12 +416,6 @@ li {
   }
 }
 
-#account {
-  padding: 20px 0;
-  box-sizing: border-box;
-  font-size: 0;
-}
-
 #account a {
   position: relative;
   display: inline-block;
@@ -202,7 +457,7 @@ li {
 @media only screen and (min-width: 641px) {
   #menu {
     margin: 0 auto;
-    width: 600px;
+    width: 620px;
     height: 100%;
     font-size: 0;
     text-align: center;
@@ -814,4 +1069,460 @@ li {
 #container div.card > div.board > a.article > ul.status > li.comment.active {
   color: #05bcbc;
   background-image: url(../img/container.articles.comment.png);
+}
+
+@media only screen and (min-width: 641px) {
+  #container > div.wrap {
+    float: none;
+    position: relative;
+    left: 25px;
+    margin-top: 25px;
+    width: 780px;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  nav > div.shadow {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 25%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+}
+#writeArticleButton {
+  display: block;
+  margin-bottom: 5px;
+  padding: 0 10px;
+  height: 50px;
+  line-height: 46px;
+  border: 2px solid #d6d6d6;
+  box-sizing: border-box;
+  cursor: text;
+  color: #a6a6a6;
+  font-size: 14px;
+  background: #f9f9f9 url(../img/container.write.background.png) no-repeat right
+    center;
+  background-size: 40px 40px;
+}
+
+#container > div.articles > article {
+  margin-bottom: -1px;
+  box-sizing: border-box;
+  border: 1px solid #e3e3e3;
+  background-color: #fff;
+}
+
+#container > div.articles > article.list > a.article {
+  display: flex;
+  padding: 16px 24px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#container hr {
+  clear: both;
+  width: 100%;
+  height: 0;
+  border: 0;
+}
+
+#container > div.articles > article.list div.info time.small {
+  display: inline-block;
+  flex-shrink: 0;
+  margin-right: 4px;
+  line-height: 18px;
+  height: 18px;
+  font-size: 12px;
+  color: #a6a6a6;
+}
+#container > div.articles > article time {
+  color: #a6a6a6;
+  letter-spacing: 0;
+}
+
+#container > div.articles > article.list div.info h3.small {
+  display: inline-block;
+  height: 18px;
+  line-height: 18px;
+  font-size: 12px;
+  font-weight: normal;
+  letter-spacing: 0;
+}
+#container > div.articles > article h3.small {
+  color: #a6a6a6;
+}
+#container > div.articles > article.list h2.medium {
+  line-height: 20px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 14px;
+  font-weight: normal;
+}
+#container > div.articles > article h2 {
+  color: #292929;
+}
+.bold {
+  font-weight: bold !important;
+}
+
+#container > div.articles > article.list p.medium {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  word-break: break-word;
+  margin-bottom: 4px;
+  max-height: 100px;
+  line-height: 20px;
+  white-space: normal;
+  font-size: 14px;
+  color: #444444;
+}
+#container > div.articles > article p {
+  word-break: break-all;
+}
+
+#container > div.articles > div.pagination > form.search {
+  float: left;
+  margin-top: 5px;
+  margin-left: 5px;
+  padding: 8px 34px 8px 5px;
+  border: 1px solid #a6a6a6;
+  border-radius: 3px;
+  background: transparent
+    url(/images/new/container.articles.pagination.search.png) no-repeat right
+    10px center;
+  background-size: 16px 16px;
+}
+
+#container > div.articles > div.pagination > a.next {
+  float: right;
+  margin-left: 0;
+  margin-right: 5px;
+  padding: 0 25px 0 10px;
+  background-image: url(/images/new/container.articles.pagination.next.png);
+  background-position: right 10px center;
+}
+#container > div.articles > div.pagination > a {
+  display: block;
+  margin-top: 5px;
+  margin-left: 5px;
+  padding: 0 10px 0 25px;
+  height: 35px;
+  line-height: 35px;
+  border: 1px solid #f91f15;
+  border-radius: 3px;
+  color: #f91f15;
+  font-size: 14px;
+  font-weight: bold;
+  background-repeat: no-repeat;
+  background-position: 10px center;
+  background-size: 10px 10px;
+  cursor: pointer;
+}
+
+#container > div.articles > div.pagination > form.search {
+  float: left;
+  margin-top: 5px;
+  margin-left: 5px;
+  padding: 8px 34px 8px 5px;
+  border: 1px solid #a6a6a6;
+  border-radius: 3px;
+  background: transparent url(../img/container.articles.pagination.search.png)
+    no-repeat right 10px center;
+  background-size: 16px 16px;
+}
+
+#container > div.articles > div.pagination > form.search > select {
+  float: left;
+  margin-right: 5px;
+  height: 19px;
+  line-height: 19px;
+  border: 0;
+  color: #737373;
+  font-size: 12px;
+  background-color: transparent;
+}
+
+#container > div.articles > div.pagination > form.search > input.text {
+  height: 19px;
+  line-height: 19px;
+  border: 0;
+  width: 130px;
+  color: #292929;
+  font-size: 14px;
+  background-color: transparent;
+}
+
+#container > div.articles > div.pagination > a.next {
+  float: right;
+  margin-left: 0;
+  margin-right: 5px;
+  padding: 0 25px 0 10px;
+  background-image: url(../img/container.articles.pagination.next.png);
+  background-position: right 10px center;
+}
+
+#container > div.articles > div.pagination > a {
+  display: block;
+  margin-top: 5px;
+  margin-left: 5px;
+  padding: 0 10px 0 25px;
+  height: 35px;
+  line-height: 35px;
+  border: 1px solid #f91f15;
+  border-radius: 3px;
+  color: #f91f15;
+  font-size: 14px;
+  font-weight: bold;
+  background-repeat: no-repeat;
+  background-position: 10px center;
+  background-size: 10px 10px;
+  cursor: pointer;
+}
+
+@media only screen and (min-width: 641px) {
+  #bottom {
+    margin: 0 auto 25px auto;
+    width: 1180px;
+  }
+}
+
+#bottom {
+  text-align: center;
+}
+
+#bottom ul.links li {
+  display: inline-block;
+}
+
+#bottom > ul.links > li > a {
+  display: inline-block;
+  margin: 0 4px 4px 4px;
+  line-height: 20px;
+  color: #737373;
+  font-size: 12px;
+}
+
+#bottom > ul.links > li.copyright > a,
+#bottom > ul.links > li.privacy > a {
+  font-weight: bold;
+}
+#bottom > span {
+  display: inline-block;
+  line-height: 20px;
+  color: #a6a6a6;
+  font-size: 12px;
+}
+
+body,
+div,
+nav,
+aside,
+article,
+h1,
+h2,
+h3,
+h4,
+ol,
+ul,
+li,
+dl,
+dt,
+dd,
+p,
+span,
+form,
+th,
+td,
+input,
+textarea,
+select,
+pre,
+address {
+  color: #666;
+  font-size: 12px;
+  letter-spacing: -0.5px;
+}
+
+img,
+input,
+select,
+textarea {
+  vertical-align: middle;
+}
+
+#container hr {
+  clear: both;
+  width: 100%;
+  height: 0;
+  border: 0;
+}
+
+#bottom > span {
+  display: inline-block;
+  line-height: 20px;
+  color: #a6a6a6;
+  font-size: 12px;
+}
+
+@media only screen and (min-width: 641px) {
+  #container > div.wrap {
+    float: none;
+    position: relative;
+    left: 25px;
+    margin-top: 25px;
+    width: 780px;
+  }
+}
+#container > div.bubbles {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  margin-bottom: -20px;
+  padding: 15px 0px 15px 15px;
+  border: 1px solid #d6d6d6;
+  box-sizing: border-box;
+}
+
+#container > div.bubbles > div.bubble {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+#container > div.bubbles > div.bubble.question > div.group {
+  background-image: url(../img/icn_mcr_board_question_light.png);
+}
+#container > div.bubbles > div.bubble > div.group {
+  width: 24px;
+  height: 24px;
+  flex-shrink: 0;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+
+#container > div.bubbles > div.bubble > div.items {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  overflow: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+#container > div.bubbles > div.bubble.question > div.items > div.item {
+  background-color: #edfffe;
+}
+#container > div.bubbles > div.bubble > div.items > div.item {
+  line-height: 20px;
+  border-radius: 12px;
+  color: #444444;
+  font-size: 14px;
+  max-width: 240px;
+}
+#container > div.bubbles > div.bubble > div.items > div.item > a {
+  display: block;
+  padding: 12px;
+}
+
+#container > div.bubbles > div.bubble > div.items > div.item > a > span {
+  display: inline-block;
+  line-height: 20px;
+  max-width: 100%;
+  vertical-align: top;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+#container > div.bubbles > div.bubble > div.items:last-child::after {
+  content: ".";
+  opacity: 0;
+}
+
+#container > div.bubbles > div.bubble.popular > div.group {
+  background-image: url(../img/icn_mcr_board_hotarticle_light.png);
+}
+
+@media only screen and (min-width: 641px) {
+  #container > div.bubbles > div.bubble.popular > div.item {
+    max-width: 240px;
+  }
+}
+#container > div.bubbles > div.bubble.popular > div.item {
+  background-color: #fff3f3;
+}
+#container > div.bubbles > div.bubble.popular > div.item {
+  line-height: 20px;
+  border-radius: 12px;
+  color: #444444;
+  font-size: 14px;
+  overflow: hidden;
+}
+
+#container > div.bubbles > div.bubble.popular > div.item > a {
+  display: flex;
+  align-items: center;
+  padding: 12px;
+}
+
+#container > div.bubbles > div.bubble.popular > div.item > a > span {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+#container > div.bubbles > div.bubble.popular > div.item > a > div.posvote {
+  line-height: 11px;
+  margin-left: 8px;
+  padding-left: 15px;
+  color: #f91f15;
+  background-image: url(../img/container.articles.vote.png);
+  background-size: 11px 11px;
+  background-repeat: no-repeat;
+}
+
+@media only screen and (max-width: 640px) {
+  #container > div.bubbles {
+    margin-top: 5px;
+    margin-bottom: 0px;
+    background-color: #fff;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  #submenu > div.wrap {
+    padding: 10px;
+  }
+}
+@media only screen and (max-width: 640px) {
+  #submenu > div.wrap > div.group > h3,
+  #submenu > div.wrap > div.group > ul > li > a {
+    font-size: 12px;
+  }
+}
+@media only screen and (max-width: 640px) {
+  #submenu > div.wrap > div.divider {
+    margin-right: 10px;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  #submenu > div.wrap > div.group {
+    margin-right: 10px;
+    width: 120px;
+  }
+}
+
+@media only screen and (max-width: 640px) {
+  #submenu > div.wrap > div.group > h3,
+  #submenu > div.wrap > div.group > ul > li > a {
+    font-size: 12px;
+  }
 }
