--- a/everytime/css/login.css
+++ b/everytime/css/login.css
@@ -26,6 +26,14 @@ address {
   font-family: "Apple SD Gothic Neo", "맑은 고딕", "돋움", sans-serif;
 }
 
+@media only screen and (max-width: 779px) {
+  div.container[data-v-c80e0668] {
+    box-sizing: border-box;
+    padding: 48px 24px;
+    width: 100%;
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
